# customer-personality-analysis

./: README.md  main.py  pyproject.toml
data/: marketing_campaign.csv
notebook/: 2_customer_clustering.ipynb  Untitled-1.ipynb  customer_clustering.ipynb  data_exploration.ipynb  marketing_antoine.ipynb  modeling.ipynb  sandbox.ipynb
veille/: cah.md  dbscan.md  kmean.md
